--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
 
     "minimum-stability": "stable",
     "require": {
-        "php": "~5.6",
+        "php": ">=5.6",
 
         "symfony/symfony": "~2.7",
         "symfony/framework-bundle": "~2.7",
