--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
     "extra": {
         "symfony-app-dir": "app",
         "symfony-bin-dir": "bin",
+        "symfony-tests-dir": "tests",
         "symfony-var-dir": "var",
         "symfony-web-dir": "web",
         "incenteev-parameters": [{
