--- a/app/config/services/controllers/security.yml
+++ b/app/config/services/controllers/security.yml
@@ -1,6 +1,6 @@
 services:
     security_controller:
-        class: Acme\Bundle\AppBundle\Controller\SecurityController
+        class: Application\Bundle\AppBundle\Controller\SecurityController
         arguments:
             - @form.factory
             - @templating
