--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -2,7 +2,7 @@ default:
     suites:
         default:
             contexts:
-                - Acme\Behat\FeatureContext
+                - Application\Behat\FeatureContext
                 - Behat\MinkExtension\Context\MinkContext
 
     extensions:
