update to Symfony 3.0
Changelogs summary:

 - symfony/security-acl removed (installed version was v2.8.0)
 - symfony/polyfill-php54 removed (installed version was v1.1.0)
 - symfony/polyfill-php55 removed (installed version was v1.1.0)
 - ircmaxell/password-compat removed (installed version was v1.0.4)

 - symfony/symfony updated from v2.8.2 to v3.0.2
   See changes: https://github.com/symfony/symfony/compare/v2.8.2...v3.0.2
   Release notes: https://github.com/symfony/symfony/releases/tag/v3.0.2

 - havvg/dry-bundle updated from v3.0.0 to dev-master
   See changes: https://github.com/havvg/HavvgDRYBundle/compare/v3.0.0...935aa80

 - behat/behat updated from v3.0.15 to v3.1.0rc1
   See changes: https://github.com/Behat/Behat/compare/v3.0.15...v3.1.0rc1
   Release notes: https://github.com/Behat/Behat/releases/tag/v3.1.0rc1

 - behat/mink updated from v1.7.0 to dev-master
   See changes: https://github.com/minkphp/Mink/compare/v1.7.0...309421c

 - behat/mink-extension updated from v2.1.0 to dev-master
   See changes: https://github.com/Behat/MinkExtension/compare/v2.1.0...296445c

 - sensiolabs/security-checker installed in version v3.0.2
   Release notes: https://github.com/sensiolabs/security-checker/releases/tag/v3.0.2

 - sensio/distribution-bundle installed in version v5.0.3
   Release notes: https://github.com/sensiolabs/SensioDistributionBundle/releases/tag/v5.0.3

 - symfony/phpunit-bridge installed in version v2.8.2
   Release notes: https://github.com/symfony/phpunit-bridge/releases/tag/v2.8.2

--- a/app/config/environments/parameters.yml.dist
+++ b/app/config/environments/parameters.yml.dist
@@ -5,4 +5,4 @@ parameters:
 
     secret: ThisIsAnUnsecureSecret
     session_cookie_name: PHPSESSION
-    remember_me_key: ThisIsAnUnsecureKey
+    remember_me_secret: ThisIsAnUnsecureSecret
