--- a/app/config/services/controllers/security.yml
+++ b/app/config/services/controllers/security.yml
@@ -2,5 +2,5 @@ services:
     security_controller:
         class: Application\Bundle\AppBundle\Controller\SecurityController
         arguments:
-            - @form.factory
-            - @templating
+            - '@form.factory'
+            - '@templating'
