--- a/app/config/services/domain/events.yml
+++ b/app/config/services/domain/events.yml
@@ -4,4 +4,4 @@ services:
     domain.event_dispatcher:
         class: Symfony\Component\EventDispatcher\ContainerAwareEventDispatcher
         arguments:
-            - @service_container
+            - '@service_container'
