--- a/app/config/services/form/types.yml
+++ b/app/config/services/form/types.yml
@@ -2,4 +2,4 @@ services:
     form.login_type:
         class: Application\Bundle\AppBundle\Form\Type\User\LoginType
         tags:
-            - { name: form.type, alias: login }
+            - { name: 'form.type', alias: 'login' }
