--- a/app/config/routing/default.yml
+++ b/app/config/routing/default.yml
@@ -1,7 +1,7 @@
 welcome:
     path: /
     defaults:
-        _controller: AppBundle:Welcome:index
+        _controller: welcome_controller:helloAction
 
 security_login:
     path: /login
