--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
+/.sass-cache
+
 /app/config/environments/*/local.yml
 /app/config/environments/parameters.yml
 
 !composer.lock
+!Gemfile.lock
+/node_modules
 
 /var
 /vendor
