--- a/composer.json
+++ b/composer.json
@@ -37,9 +37,9 @@
         "phpunit/phpunit": "^5.2.3",
         "mockery/mockery": "^0.9.4",
 
-        "behat/behat": "^3.1@rc",
-        "behat/mink": "^1.7@dev",
-        "behat/mink-extension": "^2.1@dev",
+        "behat/behat": "^3.1",
+        "behat/mink": "^1.7",
+        "behat/mink-extension": "^2.1",
         "behat/mink-browserkit-driver": "^1.3.1",
         "behat/symfony2-extension": "^2.1.1"
     },
