add quotes to YAML parameters

--- a/app/config/bundles/monolog.yml
+++ b/app/config/bundles/monolog.yml
@@ -15,5 +15,5 @@ monolog:
 
         app:
             type:  stream
-            path:  %kernel.logs_dir%/app.log
+            path:  '%kernel.logs_dir%/app.log'
             level: debug
