--- a/app/config/bundles/twig.yml
+++ b/app/config/bundles/twig.yml
@@ -1,6 +1,6 @@
 twig:
-    debug: %kernel.debug%
-    strict_variables: %kernel.debug%
+    debug: '%kernel.debug%'
+    strict_variables: '%kernel.debug%'
 
     globals:
-        form_html_novalidate: %form_html_novalidate%
+        form_html_novalidate: '%form_html_novalidate%'
