--- a/app/config/environments/prod/config.yml
+++ b/app/config/environments/prod/config.yml
@@ -15,12 +15,12 @@ monolog:
 
         app:
             type:  stream
-            path:  %kernel.logs_dir%/app.log
+            path:  '%kernel.logs_dir%/app.log'
             level: debug
 
         translation:
             type: stream
-            path: %kernel.logs_dir%/translation.log
+            path: '%kernel.logs_dir%/translation.log'
             level: debug
             channels: translation
 
