--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,7 +4,7 @@ security:
         Symfony\Component\Security\Core\User\User: plaintext
 #        Application\Model\User:
 #            algorithm: bcrypt
-#            cost: %bcrypt.cost%
+#            cost: '%bcrypt.cost%'
 
     providers:
         # Replace this provider with an actual user provider.
@@ -49,7 +49,7 @@ security:
                 default_target_path: /
 
             remember_me:
-                secret: %remember_me_secret%
+                secret: '%remember_me_secret%'
                 name: remember-me
                 remember_me_parameter: login[remember_me]
 
