--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-    "devDependencies": {
-        "gulp": "^3.9.0",
-        "gulp-concat": "^2.6.0",
-        "gulp-minify-css": "^1.2.1",
-        "gulp-ruby-sass": "^2.0.5",
-        "gulp-uglify": "^1.4.2",
-        "merge2": "^0.3.6"
-    }
+  "private": true,
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-clean-css": "^2.0.7",
+    "gulp-concat": "^2.6.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-sass": "^2.2.0",
+    "gulp-uglify": "^1.4.2"
+  }
 }
